--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,10 @@
     <button id="loadMoreBtn" class="load-more" style="display: none;">
       Загрузить еще
     </button>
+    <!-- Кнопка "Наверх" -->
+<button id="scrollToTop" class="scroll-to-top" title="Наверх">
+  ↑
+</button>
   </div>
   
   <!-- Модальное окно для просмотра видео -->
